--- a/README.textile
+++ b/README.textile
@@ -6,6 +6,13 @@ h2. Setup
 
 @oh-my-zsh@ should work with any recent release of "zsh":http://www.zsh.org/, the minimum recommended version is 4.3.9.
 
+h2. Extra setup
+
+For @oh-my-zsh@ automatic upgrade to work, you'll need to add a remote called robby pointing to git://github.com/robbyrussell/oh-my-zsh.
+
+I.e. git remote add robby git://github.com/robbyrussell/oh-my-zsh
+or if you're using http://defunkt.io/hub git remote add robbyrussell/oh-my-zsh
+
 h3. The automatic installer... (do you trust me?)
 
 You can install this via the command line with either `curl` or `wget`.
